# finalproject_avo_m25_555

./: Makefile  README.md  main.py  pyproject.toml  requuirements.txt
data/: portfolios.json  rates.json  users.json
finalproject_avo_m25_555/: cli.py  main.py
finalproject_avo_m25_555/0_valutatrade_hub/core/: models.py  usecases.py  utils.py
finalproject_avo_m25_555/core/: services.py
finalproject_avo_m25_555/valutatrade_hub/cli/: interface.py
finalproject_avo_m25_555/valutatrade_hub/core/: models.py  usecases.py  utils.py
src/deepseek_r1/: main.py  r1.py  test_deepseek.py
tests/: test_rate_freshness.py
valutatrade_hub/: __init__.py  decorators.py  logging_config.py
valutatrade_hub/cli/: __init__.py  interface.py
valutatrade_hub/core/: __init__.py  currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/data/: session.json
valutatrade_hub/infra/: __init__.py  database.py  settings.py
valutatrade_hub/parser_service/: __init__.py  api_clients.py  config.py  rates_cache.py  scheduler.py  storage.py  updater.py
