[tool.poetry]
name = "finalproject-avo-m25-555"
version = "0.1.0"
description = "Платформа для валютного трейдинга"
authors = ["Анастасия Волконская <aavolkon@mail.ru>"]
packages = [{include = "valutatrade_hub"}]  # ← ПАКЕТЫ!
package-mode = true
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.10.0"
requests = "^2.32.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.0"
mypy = "^1.12.0"

[tool.poetry.scripts]
# Основная CLI-команда (работает на Mac/Linux/Windows)
project = "valutatrade_hub.cli.interface:main"
# Альтернатива для parser service
update-rates = "valutatrade_hub.parser_service.__init__:run_cli_update"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.valutatrade]

# Настройки путей
data_dir = "data"
logs_dir = "logs"

# Настройки валютных курсов
rates_ttl_fiat_seconds = 86400    # 24 часа для фиатных валют
rates_ttl_crypto_seconds = 300     # 5 минут для криптовалют
default_base_currency = "USD"      # Валюта по умолчанию

# Настройки логирования
log_format = "detailed"            # "detailed" или "json"
log_level = "INFO"
log_max_size_mb = 10
log_backup_count = 5

# Настройки портфеля
initial_usd_balance = 1000.0       # Начальный баланс USD при регистрации

# Поддерживаемые валюты
supported_currencies = ["USD", "EUR", "RUB", "BTC", "ETH"]

# Настройки валидации
min_password_length = 4
max_password_length = 100
min_amount = 0.00000001            # Минимальная сумма для операций

[tool.valutatrade.rates]
ttl_fiat_seconds = 3600
ttl_crypto_seconds = 300
ttl_default_seconds = 1800
